--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="header__logo-img-cont">
             
           </div>
-          <span class="header__logo-sub">siddhardha reddy</span>
+          <span class="header__logo-sub">harsha vardhan</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -39,7 +39,7 @@
               </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="mailto:siddhardhalella@gmail.com" class="header__link"> Contact </a>
+              <a href="mailto:harshavardhancchowdary001@gmail.com" class="header__link"> Contact </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
@@ -80,7 +80,7 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is Gopi siddhardha</h1>
+        <h1 class="heading-primary">Hey, My name is harsha vardhan</h1>
         <div class="home-hero__info">
           <p class="text-primary">
             Iam a student,pursuing B.tech 3rd year in the stream of CSE
@@ -357,7 +357,7 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">gopi siddhardha</h4>
+            <h4 class="heading heading-sm text-lt">harsha vardhan</h4>
             <p class="main-footer__short-desc">
               
             </p>
