--- a/project-1.html
+++ b/project-1.html
@@ -23,7 +23,7 @@
           <div class="header__logo-img-cont">
           
           </div>
-          <span class="header__logo-sub">siddhardha</span>
+          <span class="header__logo-sub">harsha vardhan</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
