--- a/project-1.html
+++ b/project-1.html
@@ -186,7 +186,7 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">siddhardha</h4>
+            <h4 class="heading heading-sm text-lt">harsha vardhan</h4>
             <p class="main-footer__short-desc">
               
             </p>
