--- a/project-3.html
+++ b/project-3.html
@@ -23,7 +23,7 @@
           <div class="header__logo-img-cont">
           
           </div>
-          <span class="header__logo-sub">siddhardha</span>
+          <span class="header__logo-sub">harsha vardhan</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -186,7 +186,7 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">siddhardha</h4>
+            <h4 class="heading heading-sm text-lt">harsha vardhan</h4>
             <p class="main-footer__short-desc">
               
             </p>
